--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-python@master
         with:
           python-version: '3.x'
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install -U platformio
       - name: Build
